# GarnishEngine

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  GarnishApp  GarnishEngine  GarnishEngine.cmake  Makefile  README.md  carrot_window.cc  carrot_window.hpp  cmake_install.cmake  compile_commands.json  main.cc
.cache/clangd/index/: main.cc.0A0DD4B3786822C2.idx
.github/workflows/: cmake-multi-platform.yml
Test/: test_app.cc
examples/: CMakeLists.txt
examples/ModifiedECS/: CMakeLists.txt  ModifiedECS  modifiedECS.cc  modifiedECS.h
examples/MultiCameraTestApp/: CMakeLists.txt  MultiCamTestApp  TestApp  multi_cam_test_app.cc
examples/Pong/: CMakeLists.txt  TestApp  pong.cc  pong.h
examples/TestApp/: CMakeLists.txt  test_app.cc  test_app.h
examples/VulkanTestApp/: CMakeLists.txt  test_app.cc  test_app.h
include/: OpenGL.hpp  Vulkan.hpp  camera.hpp  framebuffer.hpp  garnish.hpp  garnish_app.hpp  garnish_debug.hpp  garnish_event.hpp  garnish_mesh.hpp  garnish_model.hpp  garnish_sprite.hpp  garnish_texture.hpp  garnish_window.hpp  gl_buffer.hpp  graphics_pipeline.hpp  ogl_renderer.hpp  read_file.hpp  render_device.hpp  shader_program.hpp  vertex_buffer.hpp  vulkan_renderer.hpp
include/Rendering/: render_device.hpp  shared.hpp
include/Rendering/OpenGL/: OpenGL.hpp  framebuffer.hpp  ogl_renderer.hpp
include/Rendering/VulkanBackend/: Vulkan.hpp  vulkan_renderer.hpp
include/Utility/: sdl_raii.hpp
planning/: Seperation of Game and Runtime.md  Seperation of Game and Runtime.txt  TODO.md  TODO.txt
shaders/: frag.spv  shader.frag  shader.vert  vert.spv  vulkan.frag  vulkan.vert
src/: carrot_window.cc  carrot_window.hpp  garnish_app.cc  garnish_app.hpp  garnish_camera.cc  garnish_debug.hpp  garnish_device.cc  garnish_entity.hpp  garnish_event.cc  garnish_event.hpp  garnish_model.cc  garnish_model.hpp  garnish_renderer.cc  garnish_sprite.cc  garnish_sprite.h  garnish_swap_chain.cc  garnish_window.cc  garnish_window.hpp  graphics_pipeline.cc  graphics_pipeline.hpp  sage_pipeline.cc  sage_pipeline.hpp  shared.cc  shared.hpp
src/Physics/: physics_system.cpp  physics_system.hpp
src/Rendering/: camera.hpp  garnish_mesh.cc  garnish_mesh.hpp  garnish_model.hpp  garnish_sprite.cc  garnish_sprite.hpp  garnish_texture.cc  garnish_texture.hpp  geometry.cc  geometry.hpp  graphics_pipeline.cc  graphics_pipeline.hpp  render_device.cc  render_device.hpp  vertex_buffer.cc
src/Rendering/OpenGL/: OpenGL.hpp  framebuffer.cc  gl_buffer.hpp  ogl_renderer.cc  ogl_renderer.hpp  shader_program.cc  shader_program.hpp
src/Rendering/Vulkan/: Vulkan.hpp  garnish_vulkan_device.cc  garnish_vulkan_device.hpp  garnish_vulkan_instance.cpp  garnish_vulkan_instance.hpp  validation_layers.cc  vulkan_renderer.cc
src/Rendering/VulkanBackend/: vulkan_renderer.cc  vulkan_renderer.hpp
src/Utility/: camera.cc  camera.hpp  event_manager.hpp  garnish_debug.hpp  log.hpp  read_file.cc  read_file.hpp
src/Utility/OpenGL/: OpenGL.hpp  gl_buffer.hpp  shader_program.cc  shader_program.hpp
